<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="model"
            type="com.codezilla.bookmarkreader.views.download.DownloadViewModel">
        </variable>
        <variable
            name="handler"
            type="com.codezilla.bookmarkreader.views.download.DownloadViewHandler">
        </variable>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/download_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical">

        <com.github.lzyzsd.circleprogress.ArcProgress
            android:id="@+id/arc_total"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:arc_bottom_text="@string/total"
            app:arc_progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:arc_suffix_text_size="0dp"
            app:arc_text_color="@color/lightText"
            app:arc_bottom_text_size="@dimen/arc_bottom_large"
            />


        <TextView
            android:id="@+id/txtDownloading"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@{model.downloading}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/arc_total" />

        <com.github.lzyzsd.circleprogress.ArcProgress
            android:id="@+id/arc_completed"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@id/btnDownloadStart"
            app:layout_constraintEnd_toStartOf="@id/arc_failed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDownloading"
            app:arc_suffix_text_size="0dp"
            app:arc_progress="0"
            app:arc_text_color="@color/lightText"
            app:arc_bottom_text="@string/successfull"
            >
        </com.github.lzyzsd.circleprogress.ArcProgress>

        <com.github.lzyzsd.circleprogress.ArcProgress
            android:id="@+id/arc_failed"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toStartOf="@id/arc_new"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/arc_completed"
            app:layout_constraintTop_toTopOf="@id/arc_completed"
            app:arc_suffix_text_size="0dp"
            app:arc_text_color="@color/lightText"
            app:arc_bottom_text="@string/failed"
            app:arc_finished_color="@color/matte_red"
            >
        </com.github.lzyzsd.circleprogress.ArcProgress>

        <com.github.lzyzsd.circleprogress.ArcProgress
            android:id="@+id/arc_new"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/arc_failed"
            app:layout_constraintTop_toTopOf="@id/arc_completed"
            app:arc_suffix_text_size="0dp"
            app:arc_text_color="@color/lightText"
            app:arc_bottom_text="@string/neww"
            >
        </com.github.lzyzsd.circleprogress.ArcProgress>

        <Button
            android:id="@+id/btnDownloadStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="@{model.isInprogress ? handler::stopDownload:handler::startDownload}"
            android:text="@{model.isInprogress ?@string/stop:@string/start }"
            app:layout_constraintBaseline_toBaselineOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></Button>
    </android.support.constraint.ConstraintLayout>
</layout>
