<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data >
        <variable
            name="model"
            type="com.codezilla.bookmarkreader.weblist.WebListViewModel">
        </variable>
        <import type="android.view.View"/>
    </data>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/progressView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ProgressBar
            android:theme="@style/LinearProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-7dp"
            android:layout_marginTop="-7dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="@{model.isBusy ? View.VISIBLE:View.GONE}"
            />
    </FrameLayout>

    <ImageView
        android:visibility="@{model.isCompleted ? View.VISIBLE : View.GONE}"
        android:id="@+id/img_double_tick"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/double_tick_indicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:visibility="@{model.isCompleted ? View.VISIBLE : View.GONE}"
        android:id="@+id/txtRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nothing_to_read"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_double_tick" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/web_site_list_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </android.support.v7.widget.RecyclerView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_menu"
        android:layout_width="@dimen/fab_width"
        android:layout_height="@dimen/fab_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:clickable="true"
        android:src="@{model.isFabOpened ? @drawable/ic_closep : @drawable/ic_filter}"
        android:onClick="@{()->model.toggleFab()}"
        />
    <com.codezilla.bookmarkreader.views.fab.FabMenuItem
        style="@style/fab_menu_item"
        android:id="@+id/fab_unread_container"
        app:layout_constraintRight_toRightOf="@id/fab_menu"
        app:layout_constraintBottom_toTopOf="@id/fab_menu"
        android:layout_marginBottom="20dp"
        android:visibility="@{model.isFabOpened?View.VISIBLE:View.INVISIBLE}"
        app:fab_item_text="@string/unread"
        app:fab_item_src="@drawable/unseen"
        android:onClick="@{()->model.loadUnreadElements()}"
        />
    <com.codezilla.bookmarkreader.views.fab.FabMenuItem
        style="@style/fab_menu_item"
        android:id="@+id/fab_read_container"
        app:layout_constraintRight_toRightOf="@id/fab_menu"
        app:layout_constraintBottom_toTopOf="@id/fab_unread_container"
        android:visibility="@{model.isFabOpened?View.VISIBLE:View.INVISIBLE}"
        app:fab_item_text="@string/read"
        app:fab_item_src="@drawable/seen"
        android:onClick="@{()->model.loadReadElements()}"
        />
    <com.codezilla.bookmarkreader.views.fab.FabMenuItem
        style="@style/fab_menu_item"
        android:id="@+id/fab_all_container"
        app:layout_constraintRight_toRightOf="@id/fab_menu"
        app:layout_constraintBottom_toTopOf="@id/fab_read_container"
        android:visibility="@{model.isFabOpened?View.VISIBLE:View.INVISIBLE}"
        app:fab_item_text="@string/all"
        app:fab_item_src="@drawable/list"
        android:onClick="@{()->model.loadAllElements()}"
        />
</android.support.constraint.ConstraintLayout>
    </layout>